# typed-graphql

./: LICENSE  README.rst  pyproject.toml
.github/workflows/: python-package.yml
tests/: test_annotated.py  test_argument.py  test_async.py  test_class.py  test_core.py  test_dataclass.py  test_date.py  test_datetime.py  test_documentation.py  test_error.py  test_example.py  test_forward_ref.py  test_generator.py  test_input_type.py  test_introspection.py  test_mutation.py  test_newtype.py  test_newtype_scalar.py  test_py_3_10.py  test_set.py  test_typeddict.py  test_union.py  test_union_with_middleware.py  test_util.py
typed_graphql/: __init__.py  core.py  execute.py  scalars.py  util.py
