[tool.poetry]
name = "typed-graphql"
version = "0.51.0"
description = "Use types to have a simpler graphql implementation"
authors = ["Willem Thiart <himself@willemthiart.com>"]
license = "BSD-3-clause"
include = ["typed_graphql/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
graphql-core = "^3"
typing-inspect = "^0.7.1"
docstring-parser = "^0.14.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
